objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Opportunity Process</fullName>
        <description>Helps users to manage the Sales cycle by moving them through pre-defined Opportunity stages</description>
        <isActive>true</isActive>
        <values>
            <fullName>Analysis</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PO__c</fullName>
        <description>Temp Test fields</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductComments__c</fullName>
        <description>Temp test fields</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ContactMethod__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>WhatsApp/SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_ContactPreference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_LastContactedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_LostOtherReason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lost Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main point-of-contact/Account Manager working the Opportunity</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ActualCloseDate__c</fullName>
        <description>This field tracks the date on which the opportunity is won or not won.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AnalysisStageDate__c</fullName>
        <description>This field will contain the date when opportunity stage will be set to Analysis</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Analysis Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CompetitorName__c</fullName>
        <description>Specifies the Competitor Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CompetitorProduct__c</fullName>
        <description>Specifies the Competitor&apos;s Product</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Crop__c</fullName>
        <description>Specifies the Competitor&apos;s Crop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crop</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Crops__c</fullName>
        <description>Picklist for Crops from Sales Agreement</description>
        <label>Crops</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_Crops</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_DaysOpen__c</fullName>
        <description>This field contains the days an opportunity has been opened.</description>
        <formula>TODAY() - DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DeliveredRegion__c</fullName>
        <description>Specifies the Competitor&apos;s Delivered Region</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivered Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Details__c</fullName>
        <description>Additional details that Sales team can be provide</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Discount__c</fullName>
        <description>Specifies the Discount, Competitor is offering</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LeadType__c</fullName>
        <description>Type of leads available</description>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crop Consultant</fullName>
                </value>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Retailer - Agrnomist</fullName>
                </value>
                <value>
                    <fullName>Retailer - Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_LostTo__c</fullName>
        <description>This field contains the competitor to which an opportunity was lost.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lost to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MainCompetitors__c</fullName>
        <description>This field stores the main competitor(s) of the company for this opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_NeedsEndsDate__c</fullName>
        <description>Timeline in which customer needs products ends</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Needs End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_NeedsStartDate__c</fullName>
        <description>Timeline in which customer needs products starts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Needs Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OpportunitySource__c</fullName>
        <description>This is the source of the Opportunity to indicate where the Opportunity comes from.</description>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Company Inbox</fullName>
                </value>
                <value>
                    <fullName>Cross-Selling - Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Cross-Sellin - Rental</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Personal Visit</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Public Relation</fullName>
                </value>
                <value>
                    <fullName>Recommendation</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Price__c</fullName>
        <description>Specifies the Competitor&apos;s Price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main point-of-contact at the Customer</description>
        <inlineHelpText>This field will only show ACTIVE contacts. Inactive contacts can be accessed from Global Search.</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.PMC_SS_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductFamilies__c</fullName>
        <description>Indicates the product families of the Opportunity</description>
        <label>Product Families</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_ProductFamilies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ReasonLost__c</fullName>
        <description>This is the reason why the Opportunity was lost.</description>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Timing</fullName>
                </value>
                <value>
                    <fullName>Desired Product Unavailable</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Incorrect Season</fullName>
                </value>
                <value>
                    <fullName>Insufficient Customer Credit</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Misexecution</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>No Quotation</fullName>
                </value>
                <value>
                    <fullName>Not Ready For Purchase</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Unable to Meet Customer Needs</fullName>
                </value>
                <value>
                    <fullName>Will Consider Next Season</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regional Manager of the Lead</description>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates SMS opt out.</description>
        <label>SMS Opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Season__c</fullName>
        <description>Specifies the Competitor&apos;s Season</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Season</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnplannedPurchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, the Opportunity is considered an Unplanned Purchase</description>
        <inlineHelpText>When this field is checked, the Opportunity is considered an Unplanned Purchase</inlineHelpText>
        <label>Unplanned Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <description>Overall Approval Status for this Opportunity</description>
        <inlineHelpText>Overall Approval Status for this Opportunity</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</description>
        <inlineHelpText>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</inlineHelpText>
        <label>Approval Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</description>
        <inlineHelpText>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__StepApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with Native Approvals; to indicate whether the step has been approved</description>
        <inlineHelpText>Used with Native Approvals; to indicate whether the step has been approved</inlineHelpText>
        <label>Step Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedDate__c</fullName>
        <description>Date when record was submitted for approval</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when record was submitted for approval</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User requesting approval for the Opportunity.</description>
        <inlineHelpText>User requesting approval for the Opportunity.</inlineHelpText>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubmittedUserOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PMC_SS_OpportunitiesMissingActivities</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:4</value>
        </filters>
        <label>Opportunities Missing Activities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>PMC_SS_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity Process</businessProcess>
        <description>Default Opportunity Record Type</description>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PMC_SS_ReasonLostRequired</fullName>
        <active>true</active>
        <description>This validation rule checks that the Reason Lost field is populated before the Opportunity Stage is changed to &quot;Closed Lost&quot;.</description>
        <errorConditionFormula>AND(
 NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
 ISPICKVAL( StageName , &apos;Closed Lost&apos;) ,
 ISBLANK( TEXT( PMC_SS_ReasonLost__c ) ) 

)</errorConditionFormula>
        <errorDisplayField>PMC_SS_ReasonLost__c</errorDisplayField>
        <errorMessage>Please indicate the reason why this opportunity was lost in the field “Reason Lost”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictOppForNonSoldToAccounts</fullName>
        <active>true</active>
        <description>Validation rule to block the creation of opportunity when account type is Ship-to, Bill-to or Payer.</description>
        <errorConditionFormula>AND(
    NOT( 
    $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c 
    ),
    AND(
        Account.RecordType.DeveloperName == &apos;PMC_SS_Customer&apos;,
        OR(
            ISPICKVAL(Account.Type, &apos;Ship-to&apos;),
            ISPICKVAL(Account.Type, &apos;Bill-to&apos;),
            ISPICKVAL(Account.Type, &apos;Payer&apos;)
        )
    )
)</errorConditionFormula>
        <errorMessage>Only Sold-to Accounts can have Opportunities. Please select a Sold-to Account to create an Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictOpportunityStageUpdate</fullName>
        <active>true</active>
        <description>This validation rules restricts the Stage updates on opportunities related to Prospect Accounts</description>
        <errorConditionFormula>IF(
	AND(
		NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
        ISCHANGED(StageName),
        Account.RecordType.DeveloperName = &apos;PMC_SS_Prospect&apos;,
        NOT( ISPICKVAL( Type , &apos;Indirect Sales&apos;) ), 
		OR(
		  ISPICKVAL(StageName,&apos;Proposal&apos;),
		  ISPICKVAL(StageName,&apos;Finalize Quote&apos;),
		  ISPICKVAL(StageName,&apos;Closed Won&apos;)
		)    
       
    ), 
true, 
false
)</errorConditionFormula>
        <errorMessage>Prospect Accounts are not eligible for the stage you’re selecting. Please start the Credit Check Process to convert this account to a Customer Account</errorMessage>
    </validationRules>
</CustomObject>